--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.csv
 *.pickle
-work/mlruns/*
-# work/hydra/*
 .vscode
+work/mlruns/*
+!.gitkeep
 
 # Created by https://www.gitignore.io/api/macos,images,python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=macos,images,python,jupyternotebooks
